feat: Add NVIDIA RTX 3050 optimizations and Electron memory optimizations
- Add NVIDIA-specific env vars (GBM backend, GLX, threaded optimization)
- Enable explicit sync and direct scanout for NVIDIA
- Disable VRR to fix monitor flickering
- Optimize blur (passes: 3->2, size: 10->8) and shadows for 4GB VRAM
- Add memory limits and GPU acceleration flags for Chrome/Chromium
- Add memory limits and GPU acceleration flags for VS Code
- Create universal electron-flags.conf for all Electron apps
- Change default terminal to ghostty

--- a/dots/.config/chrome-flags.conf
+++ b/dots/.config/chrome-flags.conf
@@ -5,3 +5,13 @@
 --enable-features=TouchpadOverscrollHistoryNavigation
 --enable-wayland-ime
 --disable-features=ExtensionManifestV2Unsupported
+--enable-gpu-rasterization
+--enable-zero-copy
+--disable-software-rasterizer
+--enable-features=VaapiVideoDecoder,VaapiVideoEncoder
+--use-gl=desktop
+--num-raster-threads=4
+--enable-features=ParallelDownloading
+--renderer-process-limit=3
+--max-old-space-size=512
+--js-flags="--max-old-space-size=512"
