--- a/dots/.config/electron-flags.conf
+++ b/dots/.config/electron-flags.conf
@@ -3,7 +3,6 @@
 --ignore-gpu-blocklist
 --enable-features=TouchpadOverscrollHistoryNavigation
 --enable-wayland-ime
---password-store=gnome-libsecret
 --enable-gpu-rasterization
 --enable-zero-copy
 --disable-software-rasterizer
@@ -13,5 +12,7 @@
 --renderer-process-limit=2
 --max-old-space-size=384
 --js-flags="--max-old-space-size=384"
---disable-extensions
+--disable-gpu-driver-bug-workarounds
 --disable-background-timer-throttling
+--disable-backgrounding-occluded-windows
+--disable-breakpad
