--- a/dots/.config/hypr/hyprland/env.conf
+++ b/dots/.config/hypr/hyprland/env.conf
@@ -1,6 +1,22 @@
 # ############ Wayland #############
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+# Enable DRM kernel mode setting
+env = WLR_NO_HARDWARE_CURSORS,1
+
+# NVIDIA explicit sync (reduces flickering/tearing)
+env = __GL_GSYNC_ALLOWED,1
+env = __GL_VRR_ALLOWED,1
+
+# DMA-BUF support for better performance
+env = WLR_DRM_NO_ATOMIC,1
+
+# NVIDIA threaded optimization
+env = __GL_THREADED_OPTIMIZATION,1
+
 ######### Applications #########
 env = XDG_DATA_DIRS,$HOME/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share:/usr/local/share:/usr/share
 
@@ -13,4 +29,4 @@ env = XDG_MENU_PREFIX, plasma-
 env = ILLOGICAL_IMPULSE_VIRTUAL_ENV, ~/.local/state/quickshell/.venv
 
 # ######## Terminal application #########
-env = TERMINAL,kitty -1
+env = TERMINAL,ghostty
