--- a/dots/.config/hypr/hyprland/general.conf
+++ b/dots/.config/hypr/hyprland/general.conf
@@ -53,10 +53,10 @@ decoration {
         xray = true
         special = false
         new_optimizations = true
-        size = 10
-        passes = 3
+        size = 8              
+        passes = 2           
         brightness = 1
-        noise = 0.05
+        noise = 0.03         
         contrast = 0.89
         vibrancy = 0.5
         vibrancy_darkness = 0.5
@@ -69,9 +69,9 @@ decoration {
     shadow {
         enabled = true
         ignore_window = true
-        range = 30
+        range = 20           
         offset = 0 2
-        render_power = 4
+        render_power = 3      
         color = rgba(00000010)
     }
 
@@ -135,7 +135,7 @@ misc {
     disable_hyprland_logo = true
     disable_splash_rendering = true
     vfr = 1
-    vrr = 1
+    vrr = 0  
     mouse_move_enables_dpms = true
     key_press_enables_dpms = true
     animate_manual_resizes = false
@@ -158,6 +158,13 @@ cursor {
     zoom_factor = 1
     zoom_rigid = false
     hotspot_padding = 1
+}
+
+# NVIDIA-specific settings
+render {
+    explicit_sync = 2  # Enable explicit sync for NVIDIA (0=off, 1=on, 2=auto)
+    explicit_sync_kms = 2  # KMS explicit sync
+    direct_scanout = true  # Better performance for fullscreen apps
 }
 
 # Overview
