feat: Enhance Hyprland configuration with new Vulkan and NVIDIA GL environment variables, refine visual effects, and remove a VS Code extension disabling flag.
Signed-off-by: pavelc4 <dimzzy23@gmail.com>

--- a/dots/.config/hypr/hyprland/env.conf
+++ b/dots/.config/hypr/hyprland/env.conf
@@ -3,24 +3,23 @@ env = ELECTRON_OZONE_PLATFORM_HINT,auto
 
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-
-# Enable DRM kernel mode setting
-env = WLR_NO_HARDWARE_CURSORS,1
-
-# NVIDIA explicit sync (reduces flickering/tearing)
+env = VK_ICD_FILENAMES,/usr/share/vulkan/icd.d/nvidia_icd.json
+env = VK_DRIVER_FILES,/usr/share/vulkan/icd.d/nvidia_icd.json
+env = VK_INSTANCE_LAYERS,
+env = VK_LOADER_DEBUG,error
+env = AMD_VULKAN_ICD,RADV 
+env = RADV_PERFTEST,nggc  
+env = __GL_THREADED_OPTIMIZATION,1
+env = __GL_SHADER_DISK_CACHE,1
+env = __GL_SHADER_DISK_CACHE_SKIP_CLEANUP,1
+env = __GL_SHADER_DISK_CACHE_PATH,~/.cache/nvidia/GLCache
+env = __GL_YIELD,USLEEP
+env = __GL_MaxFramesAllowed,1
 env = __GL_GSYNC_ALLOWED,1
 env = __GL_VRR_ALLOWED,1
-
-# DMA-BUF support for better performance
-env = WLR_DRM_NO_ATOMIC,1
-
-# NVIDIA threaded optimization
-env = __GL_THREADED_OPTIMIZATION,1
-
-######### Applications #########
+env = __GL_SYNC_TO_VBLANK,0  
+env = WLR_NO_HARDWARE_CURSORS,1
 env = XDG_DATA_DIRS,$HOME/.local/share/flatpak/exports/share:/var/lib/flatpak/exports/share:/usr/local/share:/usr/share
-
-# ############ Themes #############
 env = QT_QPA_PLATFORM, wayland
 env = QT_QPA_PLATFORMTHEME, kde
 env = XDG_MENU_PREFIX, plasma-
