--- a/dots/.config/hypr/hyprland/general.conf
+++ b/dots/.config/hypr/hyprland/general.conf
@@ -53,25 +53,25 @@ decoration {
         xray = true
         special = false
         new_optimizations = true
-        size = 8              
+        size = 6              
         passes = 2           
         brightness = 1
-        noise = 0.03         
+        noise = 0.02
         contrast = 0.89
         vibrancy = 0.5
         vibrancy_darkness = 0.5
         popups = false
         popups_ignorealpha = 0.6
-        input_methods = true
+        input_methods = false
         input_methods_ignorealpha = 0.8
     }
 
     shadow {
         enabled = true
         ignore_window = true
-        range = 20           
+        range = 15           
         offset = 0 2
-        render_power = 3      
+        render_power = 2
         color = rgba(00000010)
     }
 
@@ -158,13 +158,6 @@ cursor {
     zoom_factor = 1
     zoom_rigid = false
     hotspot_padding = 1
-}
-
-# NVIDIA-specific settings
-render {
-    explicit_sync = 2  # Enable explicit sync for NVIDIA (0=off, 1=on, 2=auto)
-    explicit_sync_kms = 2  # KMS explicit sync
-    direct_scanout = true  # Better performance for fullscreen apps
 }
 
 # Overview
