--- a/dots/.config/hypr/hyprland/general.conf
+++ b/dots/.config/hypr/hyprland/general.conf
@@ -93,7 +93,6 @@ animations {
     bezier = menu_decel, 0.1, 1, 0, 1
     bezier = menu_accel, 0.52, 0.03, 0.72, 0.08
     bezier = stall, 1, -0.1, 0.7, 0.85
-    # Configs
     # windows
     animation = windowsIn, 1, 3, emphasizedDecel, popin 80%
     animation = fadeIn, 1, 3, emphasizedDecel
@@ -166,10 +165,9 @@ plugin {
         columns = 3
         gap_size = 5
         bg_col = rgb(000000)
-        workspace_method = first 1 # [center/first] [workspace] e.g. first 1 or center m+1
+        workspace_method = first 1 
 
-        enable_gesture = false # laptop touchpad, 4 fingers
-        gesture_distance = 300 # how far is the "max"
-        gesture_positive = false
+        enable_gesture = false 
+        gesture_distance = 300 
     }
 }
